# cdk

./: .dockerignore  .gitignore  BINDINGS_MIGRATION_PLAN.md  Cargo.lock.msrv  Cargo.toml  DEVELOPMENT.md  Dockerfile  Dockerfile.arm  Dockerfile.ci  docker-compose.ldk-node.yaml  docker-compose.postgres.yaml  docker-compose.redis-cluster.yaml  docker-compose.tor.yaml  docker-compose.yaml  flake.nix  justfile
.github/workflows/: ci-full.yml  ci.yml  docker-publish-arm.yml  docker-publish.yml  nutshell_itest.yml  static-build-publish.yml  test.yml
.supabase-wallet/: Cargo.toml
.supabase-wallet/src/: main.rs
crates/cdk-axum/: Cargo.toml
crates/cdk-cln/: README.md
crates/cdk-common/: Cargo.toml
crates/cdk-fake-wallet/: Cargo.toml  README.md
crates/cdk-ffi/: Cargo.toml
crates/cdk-integration-tests/: Cargo.toml
crates/cdk-lnd/: README.md
crates/cdk-load-test/: Cargo.toml
crates/cdk-load-test/src/: main.rs
docs/: BOLT11_BOLT12_FULL_MIGRATION_PLAN.md
meetings/: 2025-11-05-agenda.md  2025-11-12-agenda.md  2025-11-19-agenda.md  2025-11-26-agenda.md  2025-12-03-agenda.md  2025-12-10-agenda.md  2025-12-24-agenda.md  2025-12-31-agenda.md  2026-01-07-agenda.md  2026-01-14-agenda.md  2026-01-21-agenda.md  2026-01-28-agenda.md  2026-02-04-agenda.md  2026-02-11-agenda.md  2026-02-18-agenda.md  2026-03-04-agenda.md  2026-03-25-agenda.md  2026-05-20-agenda.md  2026-06-10-agenda.md  2026-07-08-agenda.md  2026-07-15-agenda.md  2026-07-22-agenda.md
misc/: interactive_regtest_mprocs.sh  itests.sh  mintd_payment_processor.sh  nutshell_wallet_itest.sh  regtest_helper.sh
(+141 files in other folders)
