[package]
name = "supabase-test-wallet"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]

[dependencies]
cdk = { path = "../../crates/cdk", default-features = false, features = ["wallet"] }
cdk-common = { path = "../../crates/cdk-common", default-features = false, features = ["wallet"] }
cdk-supabase = { path = "../../crates/cdk-supabase" }
clap = { version = "4.5.31", features = ["derive", "env"] }
rand = "0.9.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
url = "2.3"
